# rd_wgps_des

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: run_default.yaml
results/run_default/: latex_rows_S2_high.txt  latex_rows_S3_high.txt
results/run_default/S1_normal/FIFO/: backlog_snapshots.csv
results/run_default/S2_kev_burst/FIFO/: backlog_snapshots.csv
results/run_default/S2_kev_burst/R_risk_only/: backlog_snapshots.csv
results/run_default/S3_lowcap_hetero/FIFO/: backlog_snapshots.csv
results/run_default/S3_lowcap_hetero/RD_WGPS/: backlog_snapshots.csv
results/run_default_ms30/: latex_rows_S3_high.txt  metrics_agg_paper.csv  metrics_by_seed.csv
results/run_default_ms30_v2/: latex_rows_S1_high.txt  latex_rows_S2_high.txt  latex_rows_S3_high.txt  metrics.csv  metrics_agg.csv  metrics_agg_paper.csv  metrics_by_seed.csv
results/run_default_ms30_v2/S1_normal/CVSS_only/: backlog_snapshots.csv
results/run_default_ms30_v2/S1_normal/RD_WGPS/: backlog_snapshots.csv
results/run_default_ms30_v2/S1_normal/SPT_only/: backlog_snapshots.csv
results/run_default_ms30_v2/S2_kev_burst/CVSS_only/: backlog_snapshots.csv
results_/run_default/: latex_rows_S1_high.txt  metrics.csv
results_/run_default_ms30/: latex_rows_S1_high.txt  latex_rows_S2_high.txt  metrics_agg.csv
results_/run_default_ms30_v2/: metrics_agg.csv  metrics_by_seed.csv
scripts/: render_latex_tables.py  run_des.py  run_experiments.py
src/rd_wgps_des/: __init__.py  metrics.py  models.py  plots.py  plots_.py  policies.py  sim.py
(+21 files in other folders)
